; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/storage/file/extr_fd.c_InitFileAccess.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/storage/file/extr_fd.c_InitFileAccess.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@SizeVfdCache = common dso_local global i32 0, align 4
@VfdCache = common dso_local global %struct.TYPE_3__* null, align 8
@FATAL = common dso_local global i32 0, align 4
@ERRCODE_OUT_OF_MEMORY = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [14 x i8] c"out of memory\00", align 1
@VFD_CLOSED = common dso_local global i32 0, align 4
@AtProcExit_Files = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @InitFileAccess() #0 {
  %1 = load i32, i32* @SizeVfdCache, align 4
  %2 = icmp eq i32 %1, 0
  %3 = zext i1 %2 to i32
  %4 = call i32 @Assert(i32 %3)
  %5 = call i64 @malloc(i32 4)
  %6 = inttoptr i64 %5 to %struct.TYPE_3__*
  store %struct.TYPE_3__* %6, %struct.TYPE_3__** @VfdCache, align 8
  %7 = load %struct.TYPE_3__*, %struct.TYPE_3__** @VfdCache, align 8
  %8 = icmp eq %struct.TYPE_3__* %7, null
  br i1 %8, label %9, label %15

9:                                                ; preds = %0
  %10 = load i32, i32* @FATAL, align 4
  %11 = load i32, i32* @ERRCODE_OUT_OF_MEMORY, align 4
  %12 = call i32 @errcode(i32 %11)
  %13 = call i32 @errmsg(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0))
  %14 = call i32 @ereport(i32 %10, i32 %13)
  br label %15

15:                                               ; preds = %9, %0
  %16 = load %struct.TYPE_3__*, %struct.TYPE_3__** @VfdCache, align 8
  %17 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %16, i64 0
  %18 = bitcast %struct.TYPE_3__* %17 to i8*
  %19 = call i32 @MemSet(i8* %18, i32 0, i32 4)
  %20 = load i32, i32* @VFD_CLOSED, align 4
  %21 = load %struct.TYPE_3__*, %struct.TYPE_3__** @VfdCache, align 8
  %22 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %21, i32 0, i32 0
  store i32 %20, i32* %22, align 4
  store i32 1, i32* @SizeVfdCache, align 4
  %23 = load i32, i32* @AtProcExit_Files, align 4
  %24 = call i32 @on_proc_exit(i32 %23, i32 0)
  ret void
}

declare dso_local i32 @Assert(i32) #1

declare dso_local i64 @malloc(i32) #1

declare dso_local i32 @ereport(i32, i32) #1

declare dso_local i32 @errcode(i32) #1

declare dso_local i32 @errmsg(i8*) #1

declare dso_local i32 @MemSet(i8*, i32, i32) #1

declare dso_local i32 @on_proc_exit(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
